footer och banner

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
+    <div id="banner">
+        <p>10% på alla spel med kod SPEL10</p>
+    </div>
         <nav id="nav"> 
             <p id="hamburgerMenu"></p> 
             <img src="" alt="Logotype" id="logoNav"> 
@@ -24,7 +27,7 @@
 
 
 <footer>
-    jds
+<secticnn></secticnn>section>
 </footer>
 </body>
 </html>
