--- a/index.html
+++ b/index.html
@@ -8,6 +8,78 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    
+    <section id="bookSection">
+    <article class="productcard" id="bookOne">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookTwo">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookThree">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookFour">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookFive">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookSix">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookSeven">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookEight">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookNine">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+    <article class="productcard" id="bookTen">
+        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <p class="rating">star star star star star</p>
+        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <p class="preorder">Förboka</p>
+        <button class="priceBtn">89 kr</button>
+    </article>
+
+</section>
 </body>
 </html>
