--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         </nav>   
 
 
-<footer>
-<secticnn></secticnn>section>
+<footer class="footer">
+<section class="footerWrapper">
+
+</section>
 </footer>
 </body>
 </html>
