--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-
     <div id="banner">
         <p>10% på alla spel med kod SPEL10</p>
     </div>
@@ -32,46 +31,7 @@
         </nav>   
 
 
-<footer class="footer">
-<section class="footerWrapper">
-    <div>
-        <img src="" alt="Logotype" id="logoFooter">
-    </div>
-<div class="divFooterListOne">
-    <ul class="footerListOne">
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-    </ul>
-</div>
-<div class="divFooterListtwo">
-    <ul class="footerListTwo">
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-    </ul>
-</div>
-<div class="divFooterListthree">
-    <ul class="footerListThree">
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-    </ul>
-</div>
-<div class="divFooterFour">
-    <ul class="footerFour">
-       <div>
-        <p><i class="fa-brands fa-facebook"></i></p>
-       </div>
-    </ul>
-</div>
-</section>
-</footer>
-
-
+<main>
     <section id="bookSection">
     <article class="productcard" id="bookOne">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
@@ -145,9 +105,44 @@
     </article>
 
 </section>
- 
-    <nav></nav>
-
-
+</main>
+<footer class="footer">
+    <section class="footerWrapper">
+        <div>
+            <img src="" alt="Logotype" id="logoFooter">
+        </div>
+    <div class="divFooterListOne">
+        <ul class="footerListOne">
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+        </ul>
+    </div>
+    <div class="divFooterListtwo">
+        <ul class="footerListTwo">
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+        </ul>
+    </div>
+    <div class="divFooterListthree">
+        <ul class="footerListThree">
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+        </ul>
+    </div>
+    <div class="divFooterFour">
+        <ul class="footerFour">
+           <div>
+            <p><i class="fa-brands fa-facebook"></i></p>
+           </div>
+        </ul>
+    </div>
+    </section>
+    </footer>
 </body>
 </html>
