--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>Document</title>
     <script src="index.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
     <div id="banner">
         <p>10% på alla spel med kod SPEL10</p>
     </div>
@@ -32,183 +30,121 @@
         
         </nav>   
 
-
-<footer class="footer">
-<section class="footerWrapper">
-    <div>
-        <img src="" alt="Logotype" id="logoFooter">
-    </div>
-<div class="divFooterListOne">
-    <ul class="footerListOne">
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-    </ul>
-</div>
-<div class="divFooterListtwo">
-    <ul class="footerListTwo">
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-    </ul>
-</div>
-<div class="divFooterListthree">
-    <ul class="footerListThree">
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-        <li><a href="#"> Lorem, ipsum.</a></li>
-    </ul>
-</div>
-<div class="divFooterFour">
-    <ul class="footerFour">
-       <div>
-        <p><i class="fa-brands fa-facebook"></i></p>
-       </div>
-    </ul>
-</div>
-</section>
-</footer>
-
-
+<div class="booksWrap">
     <section id="bookSection">
     <article class="productcard" id="bookOne">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-    </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookTwo">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookThree">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookFour">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookFive">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookSix">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookSeven">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookEight">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookNine">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-            <i class="fa-regular fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookTen">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
-        <span class="rating">
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-        </span>
+        <p class="rating">star star star star star</p>
         <a href="#" class="bookTitle">Lorem Ipsum</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
 
 </section>
- 
-    <nav></nav>
+</div>
 
+
+<footer class="footer">
+    <section class="footerWrapper">
+        <div>
+            <img src="" alt="Logotype" id="logoFooter">
+        </div>
+    <div class="divFooterListOne">
+        <ul class="footerListOne">
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+        </ul>
+    </div>
+    <div class="divFooterListtwo">
+        <ul class="footerListTwo">
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+        </ul>
+    </div>
+    <div class="divFooterListthree">
+        <ul class="footerListThree">
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+            <li><a href="#"> Lorem, ipsum.</a></li>
+        </ul>
+    </div>
+    <div class="divFooterFour">
+        <ul class="footerFour">
+           <div>
+            <p><i class="fa-brands fa-facebook"></i></p>
+           </div>
+        </ul>
+    </div>
+    </section>
+    </footer>
 
 </body>
 </html>
