--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
     </ul>
 </div>
 <div class="divFooterFour">
-    <ul class="footerFour">
-       <div>
+    <div class="footerFour">
         <p><i class="fa-brands fa-facebook"></i> Facebook</p>
         <p><i class="fa-brands fa-instagram"></i> Instagram</p>
-       </div>
-    </ul>
+    </div>
 
 </div>
 <div><p>Lorem ipsum dolor sit amet.</p>
