updated link to image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
         <nav id="nav"> 
             <p id="hamburgerMenu"></p> 
-            <img src="adlibris-logo.png" alt="Logotype" id="logoNav"> 
+            <img src="assets/adlibris-logo.png" alt="Logotype" id="logoNav"> 
 
     
             
