--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="index.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">-->
     <script src="https://kit.fontawesome.com/ce8c6a5a73.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -82,7 +82,7 @@
 </footer>
 
 
-    <section id="bookSection">
+<section id="bookSection">
     <article class="productcard" id="bookOne">
         <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
         <span class="rating">
