--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         
         </div>
         
-        <a href="#">Logga in</a>
-        <a href="#">Varukorg</a>
+        <a href="#"><i class="fa-solid fa-user"></i></a>
+        <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
 
         </nav>   
 
