--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
             </div>
         
         </nav>   
-
-
-
+        <div class="booksWrap">
     <section id="bookSection">
     <article class="productcard" id="bookOne">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="assets/au-revoir-agneta.jpg" alt="au revoir">
         <span class="rating">
         <i class="fa fa-star"></i>
         <i class="fa fa-star"></i>
@@ -46,12 +44,12 @@
         <i class="fa fa-star"></i>
         <i class="fa fa-star"></i>
     </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Au revoir Agneta</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookTwo">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="assets/bestseller.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -59,12 +57,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Bestseller</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookThree">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="assets/de-forsta-tolv.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -169,6 +167,7 @@
     </article>
 
 </section>
+</div>
  
 <footer class="footer">
     <section class="footerWrapper">
