--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </span>
         <a href="#" class="bookTitle">Bestseller</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">49 kr</button>
     </article>
     <article class="productcard" id="bookThree">
         <img src="assets/de-forsta-tolv.jpg" alt="placeholder-img">
@@ -70,12 +70,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">De första tolv</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookFour">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="assets/det-sista-han-sa.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -83,12 +83,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Det sista han sa</a>
         <p class="preorder">Förboka</p>
         <button class="priceBtn">89 kr</button>
     </article>
     <article class="productcard" id="bookFive">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="/assets/doda-kvinnor-forlater-inte.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -96,12 +96,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Döda kvinnor förlåter inte</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">95 kr</button>
     </article>
     <article class="productcard" id="bookSix">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="/assets/nudlar.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -109,12 +109,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Nudlar</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">109 kr</button>
     </article>
     <article class="productcard" id="bookSeven">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="/assets/potatis.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -122,12 +122,12 @@
             <i class="fa fa-star"></i>
             <i class="fa-regular fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Potatis</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">149 kr</button>
     </article>
     <article class="productcard" id="bookEight">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="/assets/slutet-var-bara-borjan.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -135,12 +135,12 @@
             <i class="fa fa-star"></i>
             <i class="fa-regular fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Slutet var bara början</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">79 kr</button>
     </article>
     <article class="productcard" id="bookNine">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="/assets/sniglar-och-sno.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -148,12 +148,12 @@
             <i class="fa-regular fa-star"></i>
             <i class="fa-regular fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Sniglar och snö</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">119 kr</button>
     </article>
     <article class="productcard" id="bookTen">
-        <img src="https://images.unsplash.com/photo-1707737382613-026d789fe8fb?q=80&w=3082&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder-img">
+        <img src="/assets/vilseledaren.jpg" alt="placeholder-img">
         <span class="rating">
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -161,9 +161,9 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
         </span>
-        <a href="#" class="bookTitle">Lorem Ipsum</a>
+        <a href="#" class="bookTitle">Vilseledaren</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">109 kr</button>
     </article>
 
 </section>
