--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 
-
+<div class="booksWrap">
     <section id="bookSection">
     <article class="productcard" id="bookOne">
         <img src="assets/au-revoir-agneta.jpg" alt="au revoir">
@@ -51,7 +51,9 @@
     </span>
         <a href="#" class="bookTitle">Au revoir Agneta</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">89 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookTwo">
         <img src="assets/bestseller.jpg" alt="placeholder-img">
@@ -64,7 +66,9 @@
         </span>
         <a href="#" class="bookTitle">Bestseller</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">49 kr</button>
+        <button class="priceBtn">49 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookThree">
         <img src="assets/de-forsta-tolv.jpg" alt="placeholder-img">
@@ -77,7 +81,9 @@
         </span>
         <a href="#" class="bookTitle">De första tolv</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">89 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookFour">
         <img src="assets/det-sista-han-sa.jpg" alt="placeholder-img">
@@ -90,7 +96,9 @@
         </span>
         <a href="#" class="bookTitle">Det sista han sa</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">89 kr</button>
+        <button class="priceBtn">89 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookFive">
         <img src="/assets/doda-kvinnor-forlater-inte.jpg" alt="placeholder-img">
@@ -103,7 +111,9 @@
         </span>
         <a href="#" class="bookTitle">Döda kvinnor förlåter inte</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">95 kr</button>
+        <button class="priceBtn">95 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookSix">
         <img src="/assets/nudlar.jpg" alt="placeholder-img">
@@ -116,7 +126,9 @@
         </span>
         <a href="#" class="bookTitle">Nudlar</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">109 kr</button>
+        <button class="priceBtn">109 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookSeven">
         <img src="/assets/potatis.jpg" alt="placeholder-img">
@@ -129,7 +141,9 @@
         </span>
         <a href="#" class="bookTitle">Potatis</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">149 kr</button>
+        <button class="priceBtn">149 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookEight">
         <img src="/assets/slutet-var-bara-borjan.jpg" alt="placeholder-img">
@@ -142,7 +156,9 @@
         </span>
         <a href="#" class="bookTitle">Slutet var bara början</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">79 kr</button>
+        <button class="priceBtn">79 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookNine">
         <img src="/assets/sniglar-och-sno.jpg" alt="placeholder-img">
@@ -155,7 +171,9 @@
         </span>
         <a href="#" class="bookTitle">Sniglar och snö</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">119 kr</button>
+        <button class="priceBtn">119 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
     <article class="productcard" id="bookTen">
         <img src="/assets/vilseledaren.jpg" alt="placeholder-img">
@@ -168,7 +186,9 @@
         </span>
         <a href="#" class="bookTitle">Vilseledaren</a>
         <p class="preorder">Förboka</p>
-        <button class="priceBtn">109 kr</button>
+        <button class="priceBtn">109 kr
+            <i class="fa-solid fa-basket-shopping"></i>
+        </button>
     </article>
 
 </section>
